new home for deco

--- a/code/sandbox_ra/20201222-Bisque/b_bisque.Rmd
+++ b/code/sandbox_ra/20201222-Bisque/b_bisque.Rmd
@@ -9,5 +9,4 @@ editor_options:
 ---
 
 
-The page has moved
-[HERE](../20201226-AllDeco/deconvolution.html).
+## The page has moved [HERE](../20201226-AllDeco/deconvolution.html)
